# OpenForce

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
apps/api/: Dockerfile  README.md  alembic.ini  pyproject.toml  railway.json
apps/api/alembic/: env.py
apps/api/alembic/versions/: 9957ccb6f76a_init.py
apps/api/scripts/: seed_sf.py
apps/api/src/openforce/: config.py  main.py
apps/api/src/openforce/agent/: prompts.py  runner.py  schemas.py  tools.py
apps/api/src/openforce/api/: integrations.py  proposals.py
apps/api/src/openforce/db/: models.py  session.py
apps/api/src/openforce/gmail/: client.py  ingest.py  oauth.py
apps/api/src/openforce/proposals/: service.py
apps/api/src/openforce/salesforce/: client.py  oauth.py  writer.py
apps/api/src/openforce/workers/: scheduler.py
apps/api/tests/: conftest.py
apps/api/tests/agent/: test_fixture_suite.py
apps/api/tests/e2e/: test_e2e_smoke.py
apps/api/tests/fixtures/emails/: 01-stage-advance.json  02-new-contact.json  03-irrelevant-newsletter.json  04-ambiguous-sam.json  05-multi-deal.json
apps/api/tests/unit/: test_agent_runner.py  test_agent_schemas.py  test_agent_tools.py  test_api_proposals.py  test_config.py  test_db_session.py  test_gmail_client.py  test_gmail_oauth.py  test_health.py  test_ingest.py  test_models.py  test_pipeline.py  test_sf_client.py  test_sf_oauth.py  test_sf_writer.py
apps/web/: README.md  package-lock.json  package.json
docs/plans/: 2026-05-15-ai-crm-autopilot-design.md  2026-05-15-ai-crm-autopilot-plan.md
(+8 files in other folders)
